# rust-microservice

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
docker/: Dockerfile  Dockerfile-db
migrations/2022-07-25-225125_messages/: up.sql
schemas/: messages.sql
src/: database.rs  functions.rs  html.rs  main.rs  message.rs  microservice.rs  models.rs  schema.rs
