[package]
name = "rust-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
serde_json = "1.0.82"
diesel = { version = "1.0.0", features = ["postgres"] }
maud = { git = "https://github.com/lfairy/maud" }
serde_derive = "1.0.140"
url = "2.2.2"
serde = "1.0.140"
